# ClaimSense-AI

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/billing/: agent.py  prompt.py
backend/app/agents/document/: agent.py  prompt.py
backend/app/agents/fraud/: agent.py  prompt.py
backend/app/agents/history/: agent.py
backend/app/agents/human_approval/: agent.py
backend/app/agents/intake/: agent.py  (+1 more)
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  constants.py  exceptions.py  logger.py  security.py  types.py
backend/app/graph/: builder.py  checkpointer.py  edges.py  nodes.py  state.py
backend/app/models/: billing.py  claim.py  document.py  document_result.py  fraud.py  history.py  medical.py  policy.py  report.py  settlement.py
backend/app/prompts/: billing.md  document.md  fraud.md  history.md  medical.md  policy.md  report.md  settlement.md  supervisor.md
backend/app/schemas/: claim.py  document.py  upload.py
backend/app/services/: billing.py  claim_registry.py  convex_client.py  convex_registry.py  document_registry.py  fraud.py  history.py  history_store.py  medical.py  parser.py  policy.py  qdrant_client.py  report_generator.py  sarvam.py  settlement.py  storage.py  workflow.py
backend/app/utils/: files.py  ids.py
backend/tests/: test_claims_workflow.py  test_document_intelligence.py  test_document_parser.py  test_medical_agent.py  test_phase9_workflow.py  test_policy_agent.py  test_settlement.py
(+70 files in other folders)
