[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "convex>=0.7.0",
    "fastapi[standard]>=0.139.0",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "langgraph-checkpoint>=4.1.1",
    "loguru>=0.7.3",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client[fastembed]>=1.18.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
